force-app/main/default/objects/Login_History__c/Login_History__c.object-meta.xml
<CustomObject>
    <label>Login History</label>
    <nameField>
        <label>Login History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>