force-app/main/default/objects/Login_History__c/fields/CipherSuite__c.field-meta.xml
<CustomField>
    <fullName>CipherSuite__c</fullName>
    <label>CipherSuite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>