force-app/main/default/objects/Login_History__c/fields/CountryIso__c.field-meta.xml
<CustomField>
    <fullName>CountryIso__c</fullName>
    <label>CountryIso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>