force-app/main/default/objects/Login_History__c/fields/Flag_Num__c.field-meta.xml
<CustomField>
    <fullName>Flag_Num__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Login</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>