force-app/main/default/objects/Login_History__c/fields/LoginId__c.field-meta.xml
<CustomField>
    <fullName>LoginId__c</fullName>
    <externalId>true</externalId>
    <label>LoginId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>