force-app/main/default/objects/Login_History__c/fields/LoginTime__c.field-meta.xml
<CustomField>
    <fullName>LoginTime__c</fullName>
    <label>LoginTime</label>
    <type>DateTime</type>
</CustomField>