force-app/main/default/objects/Login_History__c/fields/LoginType__c.field-meta.xml
<CustomField>
    <fullName>LoginType__c</fullName>
    <label>LoginType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>