force-app/main/default/objects/Login_History__c/fields/LoginUrl__c.field-meta.xml
<CustomField>
    <fullName>LoginUrl__c</fullName>
    <label>LoginUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>