force-app/main/default/objects/Login_History__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Region</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Login Historys</relationshipLabel>
    <relationshipName>Login_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>