force-app/main/default/objects/Login_History__c/fields/Sales_Region_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Text__c</fullName>
    <formula>Text(UserId__r.Sales_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>